--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Moises Gomez",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
