--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Moises Gomez",
   "license": "ISC",
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -19,6 +20,7 @@
     "nodemon": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
