--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
@@ -38,7 +39,7 @@
     "html-webpack-plugin": "^5.6.0",
     "npm": "^10.2.5",
     "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
+    "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
